	- 'title'
	- 'number'
	- 'autosave' ('autosave on' or 'autosave off')
	- 'new'
	- 'save' ('save <name>')
	- 'select'
	- 'next'
	- 'prev'
	- 'attach'
	- 'show'
	- 'remove'
  * 'group' for moving window(s) into a group.
  * 'defmousetrack' and 'mousetrack', to turn on/off mouse-tracking for
    displays. It's turned off by default. With mouse-tracking turned on, it's
    possible to switch to a region ('focus') using mouse clicks. Additional
    features might be to allow clicking on window-titles in the caption to
    switch to that window.

  Changed Commands:
  * '-v' parameter to 'split' command for vertical splits.
  * 'sorendition' deprecated in favour of 'rendition so'.
  * 'digraph' can take a second parameter to specify custom digraphs. For
    example,
	'digraph >= ≥' or 'digraph >= U+2265'
    Using '0' as the second parameter will remove the digraph.
  * 'stuff' will prompt for input if there's nothing to stuff.
  * The argument to ":number" can be prefixed with '+' or '-' to use it as a
    relative argument.
  * '-g' parameter to 'windowlist' to show nested list of windows.
  * '//group' parameter to 'screen' to create a grouped window.

  .screenrc:
  * $PID expands to the PID of the screen session.
  * $STY expands to the session name.
  * Tilde-expansion in pathnames (e.g. for the 'source' command)
  * C-style escapes can be used (e.g. "\n" to get a newline with 'stuff')
  * '%p' in caption/hardstatus string expands to the PID of the backend, and
    '%+p' expands to the PID of the frontend (display).
  * '%S' in caption/hardstatus string expands to the session name.

  Window List:
  * Nested views when there are window groups (with 'windowlist -g').
  * Press 'm' to toggle the most-recent view.
  * Press 'g' to toggle nestedness.
  * Press 'a' to view all windows in the list.

  Others:
  * Start using 'ChangeLog' for logging changes again.
  * Terminfo update for 256-color support.
  * Multiple input history (partially from Romain Francoise).